--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,7 @@
               "extractLicenses": false,
               "vendorChunk": false,
               "buildOptimizer": false,
-              "serviceWorker": true
+              "serviceWorker": false
             },
             "production": {
               "fileReplacements": [
@@ -77,6 +77,9 @@
             "browserTarget": "db:build"
           },
           "configurations": {
+            "development": {
+              "browserTarget": "db:build:development"
+            },
             "production": {
               "browserTarget": "db:build:production"
             }
